1.2.3 2013-10-XX Hiroshi Sendai

Summary
- Add GUI program to create config.xml.

Details:

FEATURE: Add GUI program to create config.xml (/usr/bin/confPanel.py).
         We can create config.xml for 1 component system (Skeleton),
         2 components system (Source - Sink), and 4 components system
         (Source - Dispatch - (Sink0, Sink1)).

1.2.2 2013-07-31 Hiroshi Sendai

Summary
- Add -N option for daqmw-emulator not to create gaussian data (to test 1Gbps).
- Fix SampleLogger build error due to boost version.
- Update condition database code.
- Fix forever error log message.

Details:

FEATURE: Add -N option for daqmw-emulator.  If this option does not specified,
         send gaussian data.  Gaussian data generation function is a bottleneck
         if we need 1Gbps data transfer.
FEATURE: Update condition database code.
         - Support long long type.
         - Compilation will be failed if unspported type is specified.
         - Display warning if a variable is not initialized.
FEATURE: Log error message will be output only once now.
         To incorporate this feature, you have to re-compile your
         DAQ component.
BUG FIX: Due to boost filesystem version up, we could not build SampleLogger
         component.

1.2.1 2012-09-28 Hiroshi Sendai

Summary
- Add SampleFilter component.  Configuration file is conf/filter.xml.
- Fix a bug on daq.js.

Details:

FEATURE: Add SampleFilter component (experimental).
         Send data to SampleMonitor if the module number is less or
         equal to 4.
BUG FIX: daq.js send requests to DAQ-Opearator to get status,
         event byte size etc.  The request was sent even if
         the reply has not received.
         The Web UI did not work after long run.

1.2.0 2012-06-29 Hiroshi Sendai

Summary

- API has not changed from 1.1.1.
- Support Scientific Linux 6.x.
  - Use mod_wsgi instead of mod_python.  URL to daq.py has been changed to
    http://localhost/daqmw/scripts/daq.py on Scientific Linux 6.x.